Fix: broken script tags in .html files

--- a/src/popup/index.html
+++ b/src/popup/index.html
@@ -9,7 +9,7 @@
     <title>MyExtension Popup</title>
 
     <link rel="stylesheet" href="./style.css" />
-    <script src="./script.js" defer />
+    <script src="./script.js" defer></script>
 </head>
 
 <body>
