--- a/src/options/index.html
+++ b/src/options/index.html
@@ -10,7 +10,7 @@
 
 
     <link rel="stylesheet" href="./style.css" />
-    <script src="./script.js" defer />
+    <script src="./script.js" defer></script>
 </head>
 
 <body>
